# emojis

./: Cargo.toml  README.md
.github/workflows/: build.yaml
examples/: replace.rs
generate/: Cargo.toml
generate/src/: github.rs  main.rs  unicode.rs
src/: generated.rs  lib.rs  search.rs
tests/: smoke.rs
