[package]
name = "emojis"
version = "0.2.0"
authors = ["Ross MacArthur <ross@macarthur.io>"]
edition = "2018"
description = "✨ Lookup and iterate over emoji names, shortcodes, and groups."
readme = "README.md"
repository = "https://github.com/rossmacarthur/emojis"
license = "MIT OR Apache-2.0"
keywords = ["emoji", "search", "unicode"]
categories = ["text-processing", "no-std"]

[workspace]
members = ["generate"]
