[package]
name = "emojis"
version = "0.5.1"
authors = ["Ross MacArthur <ross@macarthur.io>"]
edition = "2018"
description = "✨ Lookup and iterate over emoji names, shortcodes, and groups"
readme = "README.md"
repository = "https://github.com/rossmacarthur/emojis"
license = "MIT OR Apache-2.0"
keywords = ["emoji", "unicode", "github", "gemoji"]
categories = ["text-processing", "no-std"]

[workspace]
members = ["generate"]

[dependencies]
phf = { version = "0.11.1", default-features = false }
