[package]
name = "generate"
version = "0.0.0"
authors = ["Ross MacArthur <ross@macarthur.io>"]
edition = "2018"
license = "MIT OR Apache-2.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
curl = "0.4.34"
heck = "0.3.2"
indexmap = "1.6.1"
itertools = "0.10.0"
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
