[package]
name = "generate"
version = "0.0.0"
authors = ["Ross MacArthur <ross@macarthur.io>"]
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
anyhow = "1.0.38"
curl = "0.4.34"
heck = "0.3.2"
indexmap = "1.6.1"
phf_codegen = "0.11.1"
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
then = "0.1.0"
